Dynamic css load for bots

--- a/static/prisma-bot/index.html
+++ b/static/prisma-bot/index.html
@@ -35,7 +35,7 @@
             showUserAvatar: false,
             enableArrowNavigation: false,
             enableReset: true,
-            extraStylesheet: 'https://static.smart-tribune.com/media/bots/resources/prisma-bot/custom.min.css'
+            extraStylesheet: window.location.href + 'custom.min.css',
         })
 
         window.addEventListener('message', function(event) {
