--- a/static/smart-bot/index.html
+++ b/static/smart-bot/index.html
@@ -36,7 +36,7 @@
             enableArrowNavigation: false,
             enableReset: true,
             enableTranscriptDownload: false,
-            extraStylesheet: 'https://www.xavierbriole.com/smart-bot/custom.min.css',
+            extraStylesheet: window.location.href + 'custom.min.css',
         })
 
         window.addEventListener('message', function(event) {
