--- a/total-du/index.html
+++ b/total-du/index.html
@@ -35,7 +35,7 @@
             enableArrowNavigation: false,
             enableReset: true,
             enableTranscriptDownload: false,
-            extraStylesheet: 'https://www.xavierbriole.com/total-du/custom.min.css',
+            extraStylesheet: window.location.href + 'custom.min.css',
         })
 
         window.addEventListener('message', function(event) {
