--- a/marcel/index.html
+++ b/marcel/index.html
@@ -27,7 +27,7 @@
     <script>
         window.botpressWebChat.init({
             host: 'https://bots.xavierbriole.com',
-            botId: 'marcel',
+            botId: 'marcel-bot',
             botName: 'Marcel',
             botConvoDescription: 'votre conseiller virtuel',
             showConversationsButton: false,
