Update theming marcel-bot

--- a/static/marcel/index.html
+++ b/static/marcel/index.html
@@ -11,6 +11,7 @@
         .links { text-align: center; }
         a { color: #2f2f2f; text-decoration: none; }
         a:hover { color: #c0c0c0; }
+        .bp-widget-widget { width: 200px !important; }
         .bp-widget-side { width: 500px !important; }
     </style>
 </head>
