Add DPD livechat for Marcel bot

--- a/static/marcel/index.html
+++ b/static/marcel/index.html
@@ -41,6 +41,17 @@
             }
         });
     </script>
+    <script type="text/javascript">
+        var LHCChatOptions = {};
+        LHCChatOptions.opt = {widget_height:340,widget_width:300,popup_height:520,popup_width:500};
+        (function() {
+            var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+            var referrer = (document.referrer) ? encodeURIComponent(document.referrer.substr(document.referrer.indexOf('://')+1)) : '';
+            var location  = (document.location) ? encodeURIComponent(window.location.href.substring(window.location.protocol.length)) : '';
+            po.src = '//tchatbo.dpd.fr/index.php/eng/chat/getstatus/(click)/internal/(position)/bottom_right/(ma)/br/(top)/350/(units)/pixels/(leaveamessage)/true?r='+referrer+'&l='+location;
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+        })();
+    </script>
     <style>
         body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; background: #fff; }
         h2 { letter-spacing: 10px; margin-top: 5em; text-align: center; color: #2f2f2f; font-weight: 100; font-size: 52px; }
