--- a/static/marcel/index.html
+++ b/static/marcel/index.html
@@ -32,6 +32,7 @@
         })
 
         window.addEventListener('message', function(event) {
+            console.log(event)
             if (event.origin === 'https://bots.xavierbriole.com' && event.data.message_type === 'session_reset') {
                 window.botpressWebChat.sendEvent({ type: 'open-chat' })
             }
