--- a/marcel/index.html
+++ b/marcel/index.html
@@ -67,7 +67,7 @@
         a:hover { color: #c0c0c0; }
         .bp-widget-widget { width: 200px !important; }
         .bp-widget-side { width: 500px !important; }
-        #lhc_container { display: none !important; }
+        #lhc_status_container { display: none !important; }
     </style>
 </body>
 </html>
