Update locale ecosystem

--- a/static/ecosystem/index.html
+++ b/static/ecosystem/index.html
@@ -21,6 +21,7 @@
             host: 'https://bots.xavierbriole.com',
             botId: 'ecosystem',
             botName: 'ecosystem',
+            locale: 'fr',
             botConvoDescription: 'votre conseiller virtuel',
             showConversationsButton: false,
             showUserName: false,
