--- a/marcel/index.html
+++ b/marcel/index.html
@@ -21,6 +21,7 @@
             host: 'https://bots.xavierbriole.com',
             botId: 'marcel-bot',
             botName: 'Marcel',
+            locale: 'fr',
             botConvoDescription: 'votre conseiller virtuel',
             showConversationsButton: false,
             showUserName: false,
