--- a/prisma-bot/index.html
+++ b/prisma-bot/index.html
@@ -35,7 +35,7 @@
             showUserAvatar: false,
             enableArrowNavigation: false,
             enableReset: true,
-            extraStylesheet: window.location.href + 'custom.min.css',
+            extraStylesheet: window.location.origin + window.location.pathname + 'custom.min.css',
         })
 
         window.addEventListener('message', function(event) {
