--- a/static/prisma-bot/index.html
+++ b/static/prisma-bot/index.html
@@ -5,14 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Prismabot</title>
-    <style>
-        body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; background: #fff; }
-        h2 { letter-spacing: 10px; margin-top: 5em; text-align: center; color: #2f2f2f; font-weight: 100; font-size: 52px; }
-        .links { text-align: center; }
-        a { color: #2f2f2f; text-decoration: none; }
-        a:hover { color: #c0c0c0; }
-        .bp-widget-side { width: 500px !important; }
-    </style>
 </head>
 <body id="main-page">
     <h2>Prismabot</h2>
@@ -39,7 +31,7 @@
         })
 
         window.addEventListener('message', function(event) {
-            if (event.origin === 'https://bots.xavierbriole.com' && event.data === 'Trigger Livechat from Prismabot') {
+            if (event.origin === 'https://bots.xavierbriole.com' && event.data === 'iadvize_event') {
                 window.botpressWebChat.sendEvent({ type: 'toggle' })
                 iAdvize.navigate('/prismabot-start')
             }
@@ -57,8 +49,6 @@
             }
         });
     </script>
-
-    <!-- START IADVIZE LIVECHAT -->
     <script type='text/javascript'>
         (function() {
             var idz = document.createElement('script');
@@ -69,6 +59,14 @@
             s.parentNode.insertBefore(idz, s);
         })();
     </script>
-    <!-- END IADVIZE LIVECHAT -->
+    <style>
+        body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; background: #fff; }
+        h2 { letter-spacing: 10px; margin-top: 5em; text-align: center; color: #2f2f2f; font-weight: 100; font-size: 52px; }
+        .links { text-align: center; }
+        a { color: #2f2f2f; text-decoration: none; }
+        a:hover { color: #c0c0c0; }
+        .bp-widget-widget { width: 200px !important; }
+        .bp-widget-side { width: 500px !important; }
+    </style>
 </body>
 </html>
