--- a/prisma-bot/index.html
+++ b/prisma-bot/index.html
@@ -21,12 +21,14 @@
             host: 'https://bots.xavierbriole.com',
             botId: 'prisma-bot',
             botName: 'Prismabot',
+            locale: 'fr',
             botConvoDescription: 'Assistant Virtuel',
             showConversationsButton: false,
             showUserName: false,
             showUserAvatar: false,
             enableArrowNavigation: false,
             enableReset: true,
+            enableTranscriptDownload: true,
             extraStylesheet: window.location.origin + window.location.pathname + 'custom.min.css',
         })
 
