--- a/time/index.html
+++ b/time/index.html
@@ -5,28 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Is it the time to eat?</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- CSS -->
     <link rel="stylesheet" type="text/css" media="screen" href="app.css" />
-
-    <!-- Meta -->
-    <meta property="og:title" content="Is it the time to ..." />
+    <meta property="og:title" content="Is it the time to…" />
     <meta property="og:description" content="eat?" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.xavierbriole.com/time" />
     <meta property="og:image" content="https://www.xavierbriole.com/time/screen.png" />
 </head>
 <body>
-
     <div class="app">
         <h1 class="title">🍔 Is it the time to eat? 🍟</h1>
-        <div class="response"></div>
+        <span class="answer">Wait for it…</span>
     </div>
-
-    <!-- Libraries -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-    <!-- Scripts -->
     <script src="app.js"></script>
-
 </body>
 </html>
