--- a/marcel/index.html
+++ b/marcel/index.html
@@ -32,24 +32,24 @@
             extraStylesheet: window.location.origin + window.location.pathname + 'custom.min.css',
         })
 
-        window.addEventListener('message', function(event) {
-            if (event.origin === 'https://bots.xavierbriole.com' && event.data.message_type === 'session_reset') {
-                window.botpressWebChat.sendEvent({ type: 'open-chat' })
-            }
+        // window.addEventListener('message', function(event) {
+        //     if (event.origin === 'https://bots.xavierbriole.com' && event.data.message_type === 'session_reset') {
+        //         window.botpressWebChat.sendEvent({ type: 'open-chat' })
+        //     }
 
-            if (event.origin === 'https://bots.xavierbriole.com' && event.data.type === 'lhc_event') {
-                var bpData = JSON.parse(event.data.bpData)
-                if (typeof lhc_var === 'undefined') { window.lhc_var = {} }
-                lhc_var.bp_data = bpData
-                window.lh_inst.openRemoteWindow()
-            }
+        //     if (event.origin === 'https://bots.xavierbriole.com' && event.data.type === 'lhc_event') {
+        //         var bpData = JSON.parse(event.data.bpData)
+        //         if (typeof lhc_var === 'undefined') { window.lhc_var = {} }
+        //         lhc_var.bp_data = bpData
+        //         window.lh_inst.openRemoteWindow()
+        //     }
 
-            if (event.data.name === 'webchatOpened') {
-                window.botpressWebChat.sendEvent({ type: 'open-chat' })
-            }
-        });
+        //     if (event.data.name === 'webchatOpened') {
+        //         window.botpressWebChat.sendEvent({ type: 'open-chat' })
+        //     }
+        // });
     </script>
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         var LHCChatOptions = {};
         LHCChatOptions.opt = {widget_height:340,widget_width:300,popup_height:520,popup_width:500};
         (function() {
@@ -59,7 +59,7 @@
             po.src = '//tchatbo.dpd.fr/index.php/eng/chat/getstatus/(click)/internal/(position)/bottom_right/(ma)/br/(top)/350/(units)/pixels/(leaveamessage)/true?r='+referrer+'&l='+location;
             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
         })();
-    </script>
+    </script> -->
     <style>
         body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; background: #fff; }
         h2 { letter-spacing: 10px; margin-top: 5em; text-align: center; color: #2f2f2f; font-weight: 100; font-size: 52px; }
