deploy: 1a1eb2f65e60f07345d1517dfb2a73873dec00ea

--- a/marcel/index.html
+++ b/marcel/index.html
@@ -32,22 +32,22 @@
             extraStylesheet: window.location.origin + window.location.pathname + 'custom.min.css',
         })
 
-        // window.addEventListener('message', function(event) {
-        //     if (event.origin === 'https://bots.xavierbriole.com' && event.data.message_type === 'session_reset') {
-        //         window.botpressWebChat.sendEvent({ type: 'open-chat' })
-        //     }
+        window.addEventListener('message', function(event) {
+            // if (event.origin === 'https://bots.xavierbriole.com' && event.data.message_type === 'session_reset') {
+            //     window.botpressWebChat.sendEvent({ type: 'open-chat' })
+            // }
 
-        //     if (event.origin === 'https://bots.xavierbriole.com' && event.data.type === 'lhc_event') {
-        //         var bpData = JSON.parse(event.data.bpData)
-        //         if (typeof lhc_var === 'undefined') { window.lhc_var = {} }
-        //         lhc_var.bp_data = bpData
-        //         window.lh_inst.openRemoteWindow()
-        //     }
+            if (event.origin === 'https://bots.xavierbriole.com' && event.data.type === 'lhc_event') {
+                var bpData = JSON.parse(event.data.bpData)
+                if (typeof lhc_var === 'undefined') { window.lhc_var = {} }
+                lhc_var.bp_data = bpData
+                window.lh_inst.openRemoteWindow()
+            }
 
-        //     if (event.data.name === 'webchatOpened') {
-        //         window.botpressWebChat.sendEvent({ type: 'open-chat' })
-        //     }
-        // });
+            // if (event.data.name === 'webchatOpened') {
+            //     window.botpressWebChat.sendEvent({ type: 'open-chat' })
+            // }
+        });
     </script>
     <script type="text/javascript">
         var LHCChatOptions = {};
