--- a/marcel/index.html
+++ b/marcel/index.html
@@ -33,6 +33,10 @@
         })
 
         window.addEventListener('message', function(event) {
+            if (event.origin === 'https://bots.xavierbriole.com' && event.data.message_type === 'session_reset') {
+                window.botpressWebChat.sendEvent({ type: 'open-chat' })
+            }
+
             if (event.origin === 'https://bots.xavierbriole.com' && event.data.type === 'lhc_event') {
                 var bpData = JSON.parse(event.data.bpData)
                 if (typeof lhc_var === 'undefined') { window.lhc_var = {} }
@@ -41,11 +45,7 @@
             }
 
             if (event.data.name === 'webchatOpened') {
-                window.botpressWebChat.sendEvent({ type: 'proactive-trigger' })
-            }
-
-            if (event.data.message_type === 'session_reset') {
-                window.botpressWebChat.sendEvent({ type: 'proactive-trigger' })
+                window.botpressWebChat.sendEvent({ type: 'open-chat' })
             }
         });
     </script>
