deploy: feb9d2092160fdadeccaf2f15624972d6edee866

--- a/debug/index.html
+++ b/debug/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <a
-      href="mailto:contact@marcel.cab?body=Bonjour,%0D%0A%0D%0ADécrivez ici votre demande :%0D%0A%0D%0APrécisez les informations suivantes : %0D%0ANom :%0D%0APrénom :%0D%0AN° de Référence Marcel :%0D%0ADate de la réservation :&amp;subject=[Application MaaS XXX]Précisez ici l'objet de votre demande"
+      href="mailto:contact@marcel.cab?body=Bonjour,%0D%0ADécrivez ici votre demande :%0D%0A%0D%0APrécisez les informations suivantes : %0D%0ANom :%0D%0APrénom :%0D%0AN° de Référence Marcel :%0D%0ADate de la réservation :&amp;subject=[Application MaaS XXX]Précisez ici l'objet de votre demande"
       class="contact-button contact-button-mail"
       ><span class="contact-button-label"
         >Envoyer un email à Marcel<span class="contact-button-description"
