--- a/ecosystem/index.html
+++ b/ecosystem/index.html
@@ -6,15 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ecosystem</title>
 </head>
-<body id="main-page">
-    <h2>ecosystem</h2>
-    <div class="links">
-        <a href="#" onclick="window.botpressWebChat.sendEvent({ type: 'message', text: 'fake message' })">SendMessage</a>
-        <a href="#" onclick="window.botpressWebChat.sendEvent({ type: 'toggle' })">Toggle Webchat</a>
-        <a href="#" onclick="window.botpressWebChat.sendEvent({ type: 'toggleBotInfo' })">Toggle Bot Infos</a>
-        <a href="#" onclick="window.botpressWebChat.sendEvent({ type: 'show' })">Open Webchat</a>
-    </div>
-
+<body>
     <script src="https://bots.xavierbriole.com/assets/modules/channel-web/inject.js"></script>
     <script>
         window.botpressWebChat.init({
@@ -43,11 +35,6 @@
         });
     </script>
     <style>
-        body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; background: #fff; }
-        h2 { letter-spacing: 10px; margin-top: 5em; text-align: center; color: #2f2f2f; font-weight: 100; font-size: 52px; }
-        .links { text-align: center; }
-        a { color: #2f2f2f; text-decoration: none; }
-        a:hover { color: #c0c0c0; }
         .bp-widget-widget { width: 200px !important; }
         .bp-widget-side { width: 500px !important; }
     </style>
