Remove useless css marcel bot

--- a/static/marcel/index.html
+++ b/static/marcel/index.html
@@ -21,7 +21,7 @@
             enableArrowNavigation: false,
             enableReset: true,
             enableTranscriptDownload: true,
-            extraStylesheet: 'https://assets.app.smart-tribune.com/dpd/BOT/bot.css',
+            extraStylesheet: 'https://components-library.app.smart-tribune.com/files/dpd/public/BOT/bot.css',
         })
 
         window.addEventListener('message', function(event) {
