Add ATInternet tracking

--- a/static/perceptron/index.html
+++ b/static/perceptron/index.html
@@ -13,7 +13,9 @@
             e.detail.init({
                 "kbId": 115,
                 "locale": "fr",
-                "cookieOptin": false,
+                "cookieOptin": true,
+                "analyticsConnector": "atinternet",
+                "analyticsUA": "634725",
                 "filters": {
                     "thematics": [],
                     "tags": []
