deploy: 293cc721183774dba434849e58e92fff49b8ae22

--- a/perceptron/index.html
+++ b/perceptron/index.html
@@ -14,6 +14,8 @@
                 "kbId": 115,
                 "locale": "fr",
                 "cookieOptin": false,
+                "analyticsConnector": "atinternet",
+                "analyticsUA": "634719",
                 "filters": {
                     "thematics": [],
                     "tags": []
