deploy: 23d78f88fd236408b9a38efbd1169f2693d5a373

--- a/perceptron/index.html
+++ b/perceptron/index.html
@@ -13,7 +13,7 @@
             e.detail.init({
                 "kbId": 115,
                 "locale": "fr",
-                "cookieOptin": false,
+                "cookieOptin": true,
                 "analyticsConnector": "atinternet",
                 "analyticsUA": "634719",
                 "filters": {
