Update locale of perceptron FAQ

--- a/static/perceptron/index.html
+++ b/static/perceptron/index.html
@@ -12,7 +12,7 @@
         window.addEventListener('STFAQLoaded', function(e) {
             e.detail.init({
                 "kbId": 115,
-                "locale": "fr",
+                "locale": "vi",
                 "cookieOptin": true,
                 "analyticsConnector": "atinternet",
                 "analyticsUA": "634725",
