--- a/faq/index.html
+++ b/faq/index.html
@@ -16,6 +16,16 @@
                     }
                 );
             });
+
+            window.addEventListener('load', function () {
+                var iframe = document.getElementById('st-faq');
+                if (iframe) {
+                    iframe.contentWindow.postMessage({
+                        type: 'STORE_URL',
+                        url: window.location.href
+                    }, '*');
+                }
+            });
         </script>
          <script type="text/javascript" async
          src="https://assets.app.smart-tribune.com/smart-tribune/FAQ/extension.main.js"></script>
