--- a/faq/index.html
+++ b/faq/index.html
@@ -17,15 +17,21 @@
                 );
             });
 
-            window.addEventListener('load', function () {
-                var iframe = document.getElementById('st-faq');
+            function sendCurrentUrlToIframe() {
+                var iframe = document.querySelector('iframe');
                 if (iframe) {
                     iframe.contentWindow.postMessage({
                         type: 'STORE_URL',
                         url: window.location.href
                     }, '*');
                 }
-            });
+            }
+
+            window.addEventListener('load', sendCurrentUrlToIframe);
+
+            window.addEventListener('popstate', sendCurrentUrlToIframe);
+            window.addEventListener('pushState', sendCurrentUrlToIframe);
+            window.addEventListener('replaceState', sendCurrentUrlToIframe);
         </script>
          <script type="text/javascript" async
          src="https://assets.app.smart-tribune.com/smart-tribune/FAQ/extension.main.js"></script>
